--- a/404/index.html
+++ b/404/index.html
@@ -15,7 +15,7 @@
         <header class="site-header outer no-image">
             <div class="inner">
                 <nav class="site-nav-center">
-                        <a class="site-nav-logo" href="http://localhost:2368"><img src="http://localhost:2368/content/images/size/w100/2019/02/Website-Icon.PNG" alt="Ronald Kühn" /></a>
+                        <a class="site-nav-logo" href="https://theronald91.github.io"><img src="https://theronald91.github.io/content/images/size/w100/2019/02/Website-Icon.PNG" alt="Ronald Kühn" /></a>
                 </nav>
             </div>
         </header>
@@ -26,7 +26,7 @@
                 <section class="error-message">
                     <h1 class="error-code">404</h1>
                     <p class="error-description">Page not found</p>
-                    <a class="error-link" href="http://localhost:2368">Go to the front page →</a>
+                    <a class="error-link" href="https://theronald91.github.io">Go to the front page →</a>
                 </section>
             </div>
         </main>
@@ -78,12 +78,12 @@
 
     <a class="post-card-image-link" href="/kleine-schritte/">
         <img class="post-card-image"
-            srcset="http://localhost:2368/content/images/size/w300/2019/02/Kleine-Schritte.jpg 300w,
-                    http://localhost:2368/content/images/size/w600/2019/02/Kleine-Schritte.jpg 600w,
-                    http://localhost:2368/content/images/size/w1000/2019/02/Kleine-Schritte.jpg 1000w,
-                    http://localhost:2368/content/images/size/w2000/2019/02/Kleine-Schritte.jpg 2000w"
+            srcset="https://theronald91.github.io/content/images/size/w300/2019/02/Kleine-Schritte.jpg 300w,
+                    https://theronald91.github.io/content/images/size/w600/2019/02/Kleine-Schritte.jpg 600w,
+                    https://theronald91.github.io/content/images/size/w1000/2019/02/Kleine-Schritte.jpg 1000w,
+                    https://theronald91.github.io/content/images/size/w2000/2019/02/Kleine-Schritte.jpg 2000w"
             sizes="(max-width: 1000px) 400px, 700px"
-            src="http://localhost:2368/content/images/size/w600/2019/02/Kleine-Schritte.jpg"
+            src="https://theronald91.github.io/content/images/size/w600/2019/02/Kleine-Schritte.jpg"
             alt="Kleine Schritte"
         />
     </a>
